--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,15 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-resource.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-cookies.min.js"></script>
+    <script src="js/Chart.min.js"></script>
+    <script src="js/moment.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/loading-bar.min.js"></script>
     <script src="js/angular-upload.min.js"></script>
     <script src="js/ui-bootstrap-tpls-0.12.0.min.js"></script>
     <script src="js/app.min.js"></script>
     <script src="js/controllers/form.min.js"></script>
-    <script src="js/controllers/games.min.js"></script>
+    <script src="js/controllers/games.js"></script>
     <script src="js/controllers/link.min.js"></script>
     <script src="js/controllers/loginForm.min.js"></script>
     <script src="js/controllers/manageForm.min.js"></script>
