--- a/public/list-view.html
+++ b/public/list-view.html
@@ -1,5 +1,5 @@
 <div class="row full-height">
-    <div class="col-sm-3 list-column full-height" id="game-list">
+    <div class="col-sm-5 list-column full-height" id="game-list">
         <div ng-show="ctrl.filtered.length == 0 && queue.length == 0 && currentlyPlaying.length == 0">
             <h3 class="text-center">No results</h3>
         </div>
@@ -72,23 +72,6 @@
                 </a>
             </div>
         </div>
-    </div>
-    <div class="col-sm-6 detail-column full-height">
-        <game game="ctrl.selectedGame"
-              genres="ctrl.gameService.genres"
-              platforms="ctrl.gameService.platforms"
-              tags="ctrl.gameService.tags"
-              link-callback="ctrl.openLinkDialog(ctrl.selectedGame)"
-              edit-callback="ctrl.editClick(ctrl.selectedGame)"
-              show-edit="ctrl.gameService.authenticated && ctrl.selectedGame.user_id == ctrl.gameService.authenticatedUser.id"
-              height="100%"
-              ng-if="ctrl.selectedGame">
-        </game>
-        <div ng-if="!ctrl.selectedGame">
-            <h3 class="text-center">Select a game</h3>
-        </div>
-    </div>
-    <div class="col-sm-3 list-column full-height">
         <h1 class="text-center hand" ng-click="ctrl.collapseSection('statistics')">
             <span class="glyphicon pull-left collapse-icon glyphicon-chevron-{{ctrl.sections.statistics ? 'right' : 'down'}}"></span>
             Statistics
@@ -116,6 +99,60 @@
             <stats-panel panel-title="Genres" key="count" value="name" items="ctrl.gameService.genres" order-by="[ctrl.countGenre, '-name']" descending="true" on-click="ctrl.query = {genre: item.id}"></stats-panel>
             <stats-panel panel-title="Platforms" key="count" value="name" items="ctrl.gameService.platforms" order-by="[ctrl.countPlatform, '-name']" descending="true" on-click="ctrl.query = {platform: item.id}"></stats-panel>
             <stats-panel panel-title="Tags" key="count" value="name" items="ctrl.gameService.tags" order-by="[ctrl.countTag, '-name']" descending="true" on-click="ctrl.query = {tag: item.id}"></stats-panel>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h1 class="panel-title overflow-ellipsis">
+                        <span class="glyphicon glyphicon-stats"></span>
+                        Chart
+                    </h1>
+                </div>
+                <div class="panel-body">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <canvas id="stats-chart"></canvas>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <form class="form-horizontal">
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label">X axis</label>
+                                        <div class="col-sm-10">
+                                            <select class="form-control" ng-model="ctrl.chart.xAxis" ng-change="ctrl.updateChart()" ng-options="x.value as x.name for x in ctrl.chart.xOptions">
+
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label">Y axis</label>
+                                        <div class="col-sm-10">
+                                            <select class="form-control" ng-model="ctrl.chart.yAxis" ng-change="ctrl.updateChart()" ng-options="y.value as y.name for y in ctrl.chart.yOptions">
+
+                                            </select>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-7 detail-column full-height">
+        <game game="ctrl.selectedGame"
+              genres="ctrl.gameService.genres"
+              platforms="ctrl.gameService.platforms"
+              tags="ctrl.gameService.tags"
+              link-callback="ctrl.openLinkDialog(ctrl.selectedGame)"
+              edit-callback="ctrl.editClick(ctrl.selectedGame)"
+              show-edit="ctrl.gameService.authenticated && ctrl.selectedGame.user_id == ctrl.gameService.authenticatedUser.id"
+              height="100%"
+              ng-if="ctrl.selectedGame">
+        </game>
+        <div ng-if="!ctrl.selectedGame">
+            <h3 class="text-center">Select a game</h3>
         </div>
     </div>
 </div>
