Stats reduction because of chart

--- a/public/grid-view.html
+++ b/public/grid-view.html
@@ -128,69 +128,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-3">
-        <stats-panel panel-title="Playtime" key="playtime" value="title" items="ctrl.gameService.games" filter-by="ctrl.hasPlaytime" order-by="['playtimeAsInt()', '-sort_as']" descending="true" on-click="ctrl.gameSelected(item, true)"></stats-panel>
-    </div>
-    <div class="col-md-3">
-        <stats-panel panel-title="Rating" key="rating" value="title" items="ctrl.gameService.games" filter-by="{rating: '!!'}" order-by="['rating', '-sort_as']" descending="true" on-click="ctrl.gameSelected(item, true)"></stats-panel>
-    </div>
-    <div class="col-md-3">
-        <stats-panel panel-title="Year" key="year" value="title" items="ctrl.gameService.games" filter-by="{year: '!!'}" order-by="['year', '-sort_as']" descending="true" on-click="ctrl.gameSelected(item, true)"></stats-panel>
-    </div>
-    <div class="col-md-3">
-        <stats-panel panel-title="Genres" key="count" value="name" items="ctrl.gameService.genres" order-by="[ctrl.countGenre, '-name']" descending="true" on-click="ctrl.query = {genre: item.id}"></stats-panel>
-    </div>
-    <div class="col-md-3">
-        <stats-panel panel-title="Platforms" key="count" value="name" items="ctrl.gameService.platforms" order-by="[ctrl.countPlatform, '-name']" descending="true" on-click="ctrl.query = {platform: item.id}"></stats-panel>
-    </div>
-    <div class="col-md-3">
-        <stats-panel panel-title="Tags" key="count" value="name" items="ctrl.gameService.tags" order-by="[ctrl.countTag, '-name']" descending="true" on-click="ctrl.query = {tag: item.id}"></stats-panel>
-    </div>
-    <div class="col-md-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h1 class="panel-title overflow-ellipsis">
-                    <span class="glyphicon glyphicon-stats"></span>
-                    Chart
-                </h1>
-            </div>
-            <div class="panel-body">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <canvas id="stats-chart"></canvas>
-                        </div>
-                        <div class="col-md-4">
-                            <form class="form-horizontal">
-                                <div class="form-group">
-                                    <label class="col-sm-4 control-label">X axis</label>
-                                    <div class="col-sm-8">
-                                        <select class="form-control" ng-model="ctrl.chart.xAxis" ng-change="ctrl.updateChart()" ng-options="x.value as x.name for x in ctrl.chart.xOptions">
-
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="col-sm-4 control-label">Y axis</label>
-                                    <div class="col-sm-8">
-                                        <select class="form-control" ng-model="ctrl.chart.yAxis" ng-change="ctrl.updateChart()" ng-options="y.value as y.name for y in ctrl.chart.yOptions">
-
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="col-sm-4 control-label">Order by</label>
-                                    <div class="col-sm-8">
-                                        <select class="form-control" ng-model="ctrl.chart.orderBy" ng-change="ctrl.updateChart()" ng-options="o.value as o.name for o in ctrl.chart.orderOptions">
-
-                                        </select>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="col-md-9">
+        <ng-include src="'chart.html'"></ng-include>
     </div>
 </div>
