--- a/public/list-view.html
+++ b/public/list-view.html
@@ -93,51 +93,7 @@
                     </dl>
                 </div>
             </div>
-            <stats-panel panel-title="Playtime" key="playtime" value="title" items="ctrl.gameService.games" filter-by="ctrl.hasPlaytime" order-by="['playtimeAsInt()', '-sort_as']" descending="true" on-click="ctrl.gameSelected(item, true)"></stats-panel>
-            <stats-panel panel-title="Rating" key="rating" value="title" items="ctrl.gameService.games" filter-by="{rating: '!!'}" order-by="['rating', '-sort_as']" descending="true" on-click="ctrl.gameSelected(item, true)"></stats-panel>
-            <stats-panel panel-title="Year" key="year" value="title" items="ctrl.gameService.games" filter-by="{year: '!!'}" order-by="['year', '-sort_as']" descending="true" on-click="ctrl.gameSelected(item, true)"></stats-panel>
-            <stats-panel panel-title="Genres" key="count" value="name" items="ctrl.gameService.genres" order-by="[ctrl.countGenre, '-name']" descending="true" on-click="ctrl.query = {genre: item.id}"></stats-panel>
-            <stats-panel panel-title="Platforms" key="count" value="name" items="ctrl.gameService.platforms" order-by="[ctrl.countPlatform, '-name']" descending="true" on-click="ctrl.query = {platform: item.id}"></stats-panel>
-            <stats-panel panel-title="Tags" key="count" value="name" items="ctrl.gameService.tags" order-by="[ctrl.countTag, '-name']" descending="true" on-click="ctrl.query = {tag: item.id}"></stats-panel>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h1 class="panel-title overflow-ellipsis">
-                        <span class="glyphicon glyphicon-stats"></span>
-                        Chart
-                    </h1>
-                </div>
-                <div class="panel-body">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <canvas id="stats-chart"></canvas>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <form class="form-horizontal">
-                                    <div class="form-group">
-                                        <label class="col-sm-2 control-label">X axis</label>
-                                        <div class="col-sm-10">
-                                            <select class="form-control" ng-model="ctrl.chart.xAxis" ng-change="ctrl.updateChart()" ng-options="x.value as x.name for x in ctrl.chart.xOptions">
-
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="col-sm-2 control-label">Y axis</label>
-                                        <div class="col-sm-10">
-                                            <select class="form-control" ng-model="ctrl.chart.yAxis" ng-change="ctrl.updateChart()" ng-options="y.value as y.name for y in ctrl.chart.yOptions">
-
-                                            </select>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <ng-include src="'chart.html'"></ng-include>
         </div>
     </div>
     <div class="col-sm-7 detail-column full-height">
