--- a/public/about.html
+++ b/public/about.html
@@ -16,7 +16,9 @@
         <li><a href="http://github.com/leon/angular-upload">Angular Upload</a></li>
         <li><a href="http://angular-ui.github.io/bootstrap/">AngularUI Bootstrap</a></li>
         <li><a href="http://getbootstrap.com/">Bootstrap</a></li>
+        <li><a href="http://chartjs.org/">Chart.js</a></li>
         <li><a href="http://github.com/illuminate/database">Illuminate Database</a></li>
+        <li><a href="http://momentjs.com/">Moment.js</a></li>
         <li><a href="http://slimframework.com/">Slim Framework</a></li>
     </ul>
 </div>
