games to games.min

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <script src="js/ui-bootstrap-tpls-0.12.0.min.js"></script>
     <script src="js/app.min.js"></script>
     <script src="js/controllers/form.min.js"></script>
-    <script src="js/controllers/games.js"></script>
+    <script src="js/controllers/games.min.js"></script>
     <script src="js/controllers/link.min.js"></script>
     <script src="js/controllers/loginForm.min.js"></script>
     <script src="js/controllers/manageForm.min.js"></script>
