--- a/public/chart.html
+++ b/public/chart.html
@@ -8,10 +8,10 @@
     <div class="panel-body">
         <div class="container-fluid">
             <div class="row">
-                <div ng-class="{'col-md-8': ctrl.view == ctrl.GRID_VIEW, 'col-md-12': ctrl.view == ctrl.LIST_VIEW}">
+                <div class="col-md-8">
                     <canvas id="stats-chart"></canvas>
                 </div>
-                <div ng-class="{'col-md-4': ctrl.view == ctrl.GRID_VIEW, 'col-md-12': ctrl.view == ctrl.LIST_VIEW}">
+                <div class="col-md-4">
                     <form class="form-horizontal">
                         <div class="form-group">
                             <label class="col-sm-6 control-label">Category (X)</label>
