--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="games" class="full-height">
+<html lang="en" ng-app="games" class="full-height" ng-controller="globalCtrl">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,8 +9,9 @@
     <link rel="icon" href="favicon.ico">
     <title>g_</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/dark-style.css" rel="stylesheet" ng-if="globalOptions.darkStyle">
     <link href="css/loading-bar.min.css" rel="stylesheet">
-    <link href="css/style.css?e" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="full-height">
     <ng-view></ng-view>
@@ -32,6 +33,7 @@
     <script src="js/controllers/loginForm.min.js"></script>
     <script src="js/controllers/manageForm.min.js"></script>
     <script src="js/controllers/queueForm.min.js"></script>
+    <script src="js/controllers/global.min.js"></script>
     <script src="js/directives/bindElement.min.js"></script>
     <script src="js/directives/game.min.js"></script>
     <script src="js/directives/statsPanel.min.js"></script>
