--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <script src="js/ui-bootstrap-tpls-0.12.0.min.js"></script>
     <script src="js/app.min.js"></script>
     <script src="js/controllers/form.min.js"></script>
-    <script src="js/controllers/games.min.js"></script>
+    <script src="js/controllers/games.js"></script>
     <script src="js/controllers/link.min.js"></script>
     <script src="js/controllers/loginForm.min.js"></script>
     <script src="js/controllers/manageForm.min.js"></script>
@@ -42,7 +42,7 @@
     <script src="js/factories/Games.min.js"></script>
     <script src="js/factories/Users.min.js"></script>
     <script src="js/filters/offset.min.js"></script>
-    <script src="js/filters/search.min.js"></script>
+    <script src="js/filters/search.js"></script>
     <script src="js/services/gameService.min.js"></script>
 </body>
 </html>
